# BRT_JUCE_CMAKE

./: .gitignore  CMakeLists.txt  README.md
cmake/: cpm.cmake
plugin/: CMakeLists.txt
plugin/source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
